add empty AccessRequestController

--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/tsd-request-controller.js"></script>
         <script src="scripts/controllers/upgrade-request-controller.js"></script>
-        <!-- <script src="scripts/controllers/access-request-controller.js"></script> -->
+        <script src="scripts/controllers/access-request-controller.js"></script>
         <script src="scripts/controllers/bug-request-controller.js"></script>
         <!-- endbuild -->
 </body>
